# neural-network

./: .gitignore  CMakeLists.txt
src/: aliases.h  dataset.h  main.cpp  neural_network.cpp  neural_network.h
src/training_sets/: training_set_mnist.cpp  training_set_mnist.h
